err/pylon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pylon-0.4.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Compiling './lib/python3.5/site-packages/pips.py'...
***   File "./lib/python3.5/site-packages/pips.py", line 356
    print " it    objective   step size   feascond     gradcond     " \
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylon'...
Compiling './lib/python3.5/site-packages/pylon/estimator.py'...
***   File "./lib/python3.5/site-packages/pylon/estimator.py", line 289
    print "State estimation converged in: %.3fs (%d iterations)" % \
                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pylon/io'...
Compiling './lib/python3.5/site-packages/pylon/io/common.py'...
***   File "./lib/python3.5/site-packages/pylon/io/common.py", line 71
    except Exception, detail:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylon/io/rdf.py'...
***   File "./lib/python3.5/site-packages/pylon/io/rdf.py", line 78
    print len(store)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylon/opf.py'...
***   File "./lib/python3.5/site-packages/pylon/opf.py", line 480
    raise ValueError, "Bad Pcost data: %s (%s)" % (p, g.name)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pylon/test'...
Listing './lib/python3.5/site-packages/pylon/test/data'...
Listing './lib/python3.5/site-packages/pylon/test/data/case24_ieee_rts'...
Listing './lib/python3.5/site-packages/pylon/test/data/case24_ieee_rts/opf'...
Listing './lib/python3.5/site-packages/pylon/test/data/case30pwl'...
Listing './lib/python3.5/site-packages/pylon/test/data/case30pwl/opf'...
Listing './lib/python3.5/site-packages/pylon/test/data/case6ww'...
Listing './lib/python3.5/site-packages/pylon/test/data/case6ww/opf'...
Listing './lib/python3.5/site-packages/pylon/test/data/case_ieee30'...
Listing './lib/python3.5/site-packages/pylon/test/data/case_ieee30/opf'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
